@@ -1,3 +1,7 @@
+2011-08-11   D. V. Wiebe <getdata@ketiltrout.net> svn:595
+	* src/internal.h: In cases where no explicitly 64-bit stat struct can be
+	found, don't bother trying to use explicitly 64-bit stat functions.
+
 2011-08-11   D. V. Wiebe <getdata@ketiltrout.net> svn:594
 	* test/sie_nframes_big.c test/sie_get_big.c test/sie_get_little.c
 	test/sie_nframes_little.c test/sie_move_to.c test/sie_put_little.c
